# learning-journey

./: .gitignore  README.md
connect4-ai/: README.md  pyproject.toml
connect4-ai/src/connect4_ai/: board.py  game.py  player.py
connect4-ai/tests/: scratchpad.py  test_board.py  testing.py
